[package]
name = "canido"
version = "1.0.0"
edition = "2024"
authors = ["Toru Takahashi <tkhstol.929@gmail.com>"]
description = "A CLI tool to view IAM policies attached to the current AWS role"
readme = "README.md"
license = "MIT"
repository = "https://github.com/tttol/canido"
homepage = "https://github.com/tttol/canido"
keywords = ["aws", "iam", "cli", "security", "policy"]
categories = ["command-line-utilities"]

[dependencies]
aws-config = { version = "1.5", features = ["behavior-version-latest", "sso", "credentials-process"] }
aws-sdk-sts = "1.54"
aws-sdk-iam = "1.59"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
colored = "2"
serde_json = "1.0"
urlencoding = "2.1"
